test/data/syntax-errors/invalid-variable-name.boozie
let 12ozBottle = 12
